<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/main_options_menu_toggle_advanced_operations"
        android:title="@string/menu_advanced_operations_off"
        app:showAsAction="always"
        android:checkable="true"/>
    <item
        android:id="@+id/main_options_menu_history"
        android:title="@string/menu_history"
        app:showAsAction="ifRoom"/>
</menu>