...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.arturkowalczyk300.calculator.view.EditTextWithSelectionChangedListener
            android:id="@+id/editTextExpression"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textCursorDrawable="@drawable/edit_text_cursor"
            android:textSize="36sp"
            tools:text="2*2" />
...
